# conman

./: .gitignore  LICENSE  README.rst  setup.cfg  setup.py
requirements/: dev.in  dev.txt  docs.txt  style.txt  tests.txt  typing.txt
src/conman/: __init__.py  __main__.py  cli.py  core.py  logger.py  main.py
tests/: logger_test.py
