[metadata]
name = conman
version = attr: conman.__version__
description = ConMan: An easy and flexible Docker based container manager.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xames3/conman/
author = Akshay Mestry (XAMES3)
author_email = xa@mes3.dev
license = MIT
license_file = LICENSE
platforms = osx, linux
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed
keywords = conman, docker, containers, containerization, python, docker-container
project_urls =
    Source = https://github.com/xames3/conman
    Tracker = https://github.com/xames3/conman/issues

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    conman = conman.cli:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[mypy]
mypy_path = src/conman
python_version = 3.11
show_error_codes = True
allow_redefinition = True
disallow_subclassing_any = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
warn_unreachable = True
